--- a/index.html
+++ b/index.html
@@ -1,7 +1,93 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Shadow Scripts</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            background-color: #1e1e1e;
+            color: #f1f1f1;
+            margin: 0;
+            padding: 0;
+        }
+        header {
+            background-color: #333;
+            padding: 20px;
+            text-align: center;
+            font-size: 24px;
+            font-weight: bold;
+        }
+        .container {
+            padding: 20px;
+        }
+        .search-bar {
+            margin-bottom: 20px;
+        }
+        .search-bar input {
+            width: 100%;
+            padding: 10px;
+            font-size: 16px;
+            border: 1px solid #444;
+            border-radius: 4px;
+            background-color: #222;
+            color: #f1f1f1;
+        }
+        .results {
+            margin-top: 20px;
+        }
+        .result-item {
+            background-color: #333;
+            padding: 15px;
+            margin-bottom: 10px;
+            border-radius: 4px;
+        }
+        .result-item h2 {
+            margin: 0;
+            font-size: 20px;
+        }
+        .result-item p {
+            margin: 5px 0 0;
+            font-size: 16px;
+        }
+    </style>
+</head>
 <body>
-<h1>Hello World</h1>
-<p>Im hosted with GitHub Pages.</p>
+    <header>Shadow Scripts</header>
+    <div class="container">
+        <div class="search-bar">
+            <input type="text" id="searchInput" placeholder="Search scripts..." onkeyup="searchScripts()">
+        </div>
+        <div class="results" id="results">
+            <!-- Search results will be displayed here -->
+            <div class="result-item">
+                <h2>Sample Script 1</h2>
+                <p>Description of the script goes here.</p>
+            </div>
+            <div class="result-item">
+                <h2>Sample Script 2</h2>
+                <p>Description of the script goes here.</p>
+            </div>
+            <!-- Add more script items as needed -->
+        </div>
+    </div>
+
+    <script>
+        function searchScripts() {
+            let input = document.getElementById('searchInput').value.toLowerCase();
+            let resultItems = document.querySelectorAll('.result-item');
+
+            resultItems.forEach(item => {
+                let title = item.querySelector('h2').innerText.toLowerCase();
+                let description = item.querySelector('p').innerText.toLowerCase();
+                if (title.includes(input) || description.includes(input)) {
+                    item.style.display = '';
+                } else {
+                    item.style.display = 'none';
+                }
+            });
+        }
+    </script>
 </body>
 </html>
