--- a/404.html
+++ b/404.html
@@ -5,7 +5,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>404 - Page Not Found</title>
     <style>
-        /* Global styles */
         body {
             font-family: Arial, sans-serif;
             background-color: #121212;
@@ -21,34 +20,57 @@
             background-size: cover;
             background-repeat: no-repeat;
             background-attachment: fixed;
-            overflow-x: hidden; /* Prevent horizontal scrolling */
+            overflow-x: hidden;
         }
 
         h1 {
             font-size: 48px;
             margin-bottom: 20px;
             color: #9370DB;
+            animation: fadeInUp 1s ease-out;
         }
 
         p {
             font-size: 24px;
             margin-bottom: 20px;
+            animation: fadeInUp 1s ease-out;
         }
 
         a {
             color: #9370DB;
             text-decoration: none;
             font-weight: bold;
+            border-bottom: 2px solid transparent;
+            transition: border-color 0.3s, color 0.3s;
+            animation: pulse 1s infinite alternate;
         }
 
         a:hover {
-            text-decoration: underline;
+            border-color: #9370DB;
+            color: #9370DB;
+        }
+
+        @keyframes fadeInUp {
+            from {
+                opacity: 0;
+                transform: translateY(20px);
+            }
+            to {
+                opacity: 1;
+                transform: translateY(0);
+            }
+        }
+
+        @keyframes pulse {
+            from { transform: scale(1); }
+            to { transform: scale(1.1); }
         }
     </style>
 </head>
 <body>
     <h1>404 - Page Not Found</h1>
     <p>The page you are looking for might have been removed, had its name changed, or is temporarily unavailable.</p>
-    <p>Go back to <a href="/">homepage</a>.</p>
+    <p>Wanna go somewhere else? <a href="index.html">Scripts</a>, <a href="executors.html">Executors</a>, <a href="options.html">Options</a>.</p>
+
 </body>
 </html>
