--- a/options.html
+++ b/options.html
@@ -204,7 +204,7 @@
     <div class="option social-media">
         <label>Social Media:</label>
         <a href="https://www.youtube.com/channel/UC3hoS0uy2XBNdBTX95jpFCg" target="_blank" class="youtube">YouTube</a>
-        <a href="#" target="_blank" class="discord">Discord</a>
+        <a href="https://discord.gg/Vwrhcyk35q" target="_blank" class="discord">Discord</a>
     </div>
 
     <div class="option">
