--- a/Raw/ShadowScripts/Doors.html
+++ b/Raw/ShadowScripts/Doors.html
@@ -1,3 +1,5 @@
-<html><head><meta name="color-scheme" content="light dark"><style type="text/css" id="operaUserStyle"></style></head><body><pre style="word-wrap: break-word; white-space: pre-wrap;">
-print("Test, No." .. math.random(0, 100000000))
-</pre></body></html>
+<html>
+<head><meta name="color-scheme" content="light dark"><style type="text/css" id="operaUserStyle"></style></head>
+<body><pre style="word-wrap: break-word; white-space: pre-wrap;">print("Test, No." .. math.random(0, 100000000))
+end)</pre></body>
+</html>
