--- a/404.html
+++ b/404.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>404 - Page Not Found</title>
+    <link rel="stylesheet" href="styles/tabs.css">
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -23,7 +24,7 @@
             overflow-x: hidden;
         }
 
-        h1 {
+        hssss {
             font-size: 48px;
             margin-bottom: 20px;
             color: #9370DB;
@@ -68,9 +69,19 @@
     </style>
 </head>
 <body>
-    <h1>404 - Page Not Found</h1>
+    <nav>
+        <div class="container">
+            <h1>Shadow Scripts</h1>
+            <div>
+                <a href="index.html">Home</a>
+                <a href="pages/options.html"> Scripts</a>
+                <a href="pages/executors.html">Executors</a>
+                <a href="pages/options.html">Options</a>
+            </div>
+        </div>
+    </nav>
+    <hssss>404 - Page Not Found</hssss>
     <p>The page you are looking for might have been removed, had its name changed, or is temporarily unavailable.</p>
-    <p>Wanna go somewhere else? <a href="index.html">Scripts</a>, <a href="executors.html">Executors</a>, <a href="options.html">Options</a>.</p>
 
 </body>
 </html>
