--- a/pages/options.html
+++ b/pages/options.html
@@ -159,44 +159,45 @@
         }
 
         footer {
-            width: 100%;
-            background-color: #1E1E1E;
-            color: #E0E0E0;
-            text-align: center;
-            padding: 20px 0;
-            position: fixed;
-            bottom: 0;
-        }
+background: rgba(0, 0, 0, 0.7);
+border-top: 1px solid rgba(255, 255, 255, 0.1);
+backdrop-filter: blur(10px);
+box-shadow: 0 -4px 8px rgba(0, 0, 0, 0.2);
+padding: 20px 0;
+color: #E0E0E0;
+}
 
-        footer .container {
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-        }
+footer .container {
+display: flex;
+justify-content: space-between;
+align-items: center;
+}
 
-        footer p {
-            margin: 10px 0;
-        }
+footer p {
+margin: 0;
+}
 
-        footer ul {
-            list-style: none;
-            padding: 0;
-            display: flex;
-        }
+footer ul {
+list-style: none;
+padding: 0;
+display: flex;
+}
 
-        footer ul li {
-            margin: 0 10px;
-        }
+footer li {
+margin: 0 10px;
+}
 
-        footer ul li a {
-            color: #E0E0E0;
-            text-decoration: none;
-            transition: color 0.3s;
-        }
+footer a {
+color: #f5f5f5;
+text-decoration: none;
+transition: color 0.3s;
+}
 
-        footer ul li a:hover {
-            color: #9370DB;
-        }
+footer a
+{
+color: #6966ff;
+}
+
     </style>
 </head>
 
