--- a/AmongUsShadowSlime/MainPage.html
+++ b/AmongUsShadowSlime/MainPage.html
@@ -381,6 +381,9 @@
         <a href="https://jogamerforgames2021.github.io/AmongUsShadowSlime/helpPage.html" target="_blank">
             <img src="https://img.icons8.com/ios-filled/50/ffffff/help.png" alt="Help">
         </a>
+        <a href="https://jogamerforgames2021.github.io/AmongUsShadowSlime/feedback.html" target="_blank">
+            <img src="https://img.icons8.com/ios-filled/50/ffffff/feedback.png" alt="Help">
+        </a>
 
         <button class="button download-launcher" onclick="window.location.href='https://raw.githubusercontent.com/jogamerforgames2021/BootstrapperTEST/refs/heads/main/Among.Us.ShadowSlime.zip'">
             Download Launcher
