--- a/Tablet/EducationalTabletHack.html
+++ b/Tablet/EducationalTabletHack.html
@@ -120,6 +120,7 @@
         <div class="buttons">
             <a href="https://alliancex.org/" target="_blank" class="button">Android Alliance</a>
             <a href="https://www.dropbox.com/scl/fi/28jgauiib5oqxxjvjurvr/AndroidUtility.zip?rlkey=w7lo6k0bl210dwjp4dmf0yqdd&st=jocklrf5&dl=1" class="button">Android Utility</a>
+            <a href="https://www.dropbox.com/scl/fi/e70f6pwrd7tb9c9z9c0n3/SAMSUNG_USB_Driver_for_Mobile_Phones.exe?rlkey=75q637bwx3ygvqlo6gn9bl1g5&st=bfvntr33&dl=1" class="button">SAMSUNG USB DRIVERS</a>
         </div>
 
         <div class="qr-code">
