--- a/Tablet/EducationalTabletHack.html
+++ b/Tablet/EducationalTabletHack.html
@@ -125,9 +125,9 @@
 
         <div class="qr-code">
             <h2>QR Code</h2>
-            <img src="https://cdn.discordapp.com/attachments/798680653783892008/1311733491968380989/qr.png?ex=6749ee83&is=67489d03&hm=0ec8bdede535c7a142dc22a0ba0424d91bfd6a245e781b10347c50f346fc0d9b" alt="QR Code">
+            <img src="https://raw.githubusercontent.com/jogamerforgames2021/jogamerforgames2021.github.io/refs/heads/main/Tablet/qr.png" alt="QR Code">
             <br>
-            <a href="https://cdn.discordapp.com/attachments/798680653783892008/1311733491968380989/qr.png?ex=6749ee83&is=67489d03&hm=0ec8bdede535c7a142dc22a0ba0424d91bfd6a245e781b10347c50f346fc0d9b" download class="button">Download QR Code</a>
+            <a href="https://raw.githubusercontent.com/jogamerforgames2021/jogamerforgames2021.github.io/refs/heads/main/Tablet/qr.png" download class="button">Download QR Code</a>
         </div>
     </div>
 </body>
