--- a/Tablet/EducationalTabletHack.html
+++ b/Tablet/EducationalTabletHack.html
@@ -1,134 +1,23 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Let's Hack the Tablet!</title>
-    <style>
-        /* Modern Radial Background */
-        body {
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            min-height: 100vh;
-            background: radial-gradient(ellipse at bottom, #20002c, #000);
-            color: #fff;
-            font-family: 'Poppins', sans-serif;
-            overflow: hidden;
-            margin: 0;
-        }
-
-        .container {
-            text-align: center;
-            max-width: 600px;
-            background: rgba(20, 0, 40, 0.9);
-            padding: 40px;
-            border-radius: 15px;
-            box-shadow: 0 4px 30px rgba(128, 0, 128, 0.6);
-        }
-
-        .main-title {
-            font-size: 3rem;
-            color: #da22ff;
-            text-shadow: 0 0 20px #da22ff, 0 0 40px #9733ee;
-        }
-
-        .subtitle {
-            font-size: 1.5rem;
-            color: #9733ee;
-            text-decoration: none;
-            font-weight: bold;
-        }
-
-        .subtitle:hover {
-            color: #da22ff;
-            text-shadow: 0 0 10px #da22ff;
-        }
-
-        .buttons {
-            margin: 20px 0;
-        }
-
-        .button {
-            display: inline-block;
-            background: #6a0dad;
-            color: white;
-            padding: 15px 30px;
-            margin: 10px;
-            border-radius: 25px;
-            text-decoration: none;
-            font-weight: bold;
-            font-size: 1rem;
-            transition: transform 0.3s, background 0.3s;
-        }
-
-        .button:hover {
-            background: #b026ff;
-            transform: scale(1.05);
-            box-shadow: 0 0 15px #b026ff;
-        }
-
-        .qr-code img {
-            width: 350px;
-            height: auto;
-            border: 5px solid #6a0dad;
-            border-radius: 10px;
-            box-shadow: 0 0 25px #9733ee;
-        }
-
-        .stars {
-        position: fixed;
-        top: 0;
-        left: 0;
-        width: 100%;
-        height: 120%;
-        z-index: -1;
-        overflow: hidden;
-    }
-
-    .star {
-        position: absolute;
-        width: 2px;
-        height: 60px;
-        background: linear-gradient(180deg, #da22ff, transparent);
-        animation: fall linear infinite;
-        opacity: 0.7;
-    }
-
-    @keyframes fall {
-        from {
-            transform: translateY(-100px);
-        }
-        to {
-            transform: translateY(110vh);
-        }
-    }
-
-    /* Randomly positioning stars */
-    .star:nth-child(n) {
-        left: calc(100% * random());
-        animation-duration: calc(4s + random() * 6s);
-        animation-delay: calc(random() * -6s);
-    }
-    </style>
-</head>
-<body>
-    <div class="container">
-        <h1 class="main-title">Let's Hack the Tablet!</h1>
-        <a href="https://www.youtube.com/@ShadowSlimeDEV" class="subtitle">@ShadowSlimeDEV</a>
-
-        <div class="buttons">
-            <a href="https://alliancex.org/" target="_blank" class="button">Android Alliance</a>
-            <a href="https://www.dropbox.com/scl/fi/28jgauiib5oqxxjvjurvr/AndroidUtility.zip?rlkey=w7lo6k0bl210dwjp4dmf0yqdd&st=jocklrf5&dl=1" class="button">Android Utility</a>
-            <a href="https://www.dropbox.com/scl/fi/e70f6pwrd7tb9c9z9c0n3/SAMSUNG_USB_Driver_for_Mobile_Phones.exe?rlkey=75q637bwx3ygvqlo6gn9bl1g5&st=bfvntr33&dl=1" class="button">SAMSUNG USB DRIVERS</a>
-        </div>
-
-        <div class="qr-code">
-            <h2>QR Code</h2>
-            <img src="https://raw.githubusercontent.com/jogamerforgames2021/jogamerforgames2021.github.io/refs/heads/main/Tablet/qr.png" alt="QR Code">
-            <br>
-            <a href="https://raw.githubusercontent.com/jogamerforgames2021/jogamerforgames2021.github.io/refs/heads/main/Tablet/qr.png" download class="button">Download QR Code</a>
-        </div>
-    </div>
-</body>
-</html>
+<!DOCTYPE html><html lang="ar" dir="rtl"><head><meta charset="UTF-8"><meta name="viewport" content="width=device-width, initial-scale=1.0"><title>موقع يوسف لتهكير تاب A9+ـ</title><link href="https://fonts.googleapis.com/css2?family=Tajawal:wght@700&display=swap" rel="stylesheet"><link rel="stylesheet" href="styles/tabs.css"><style>body{font-family:'Tajawal',sans-serif;text-align:center;color:white;padding:0px;margin:0;overflow:hidden;position:relative}.video-bg{position:fixed;top:0;left:0;width:100%;height:100%;object-fit:cover;z-index:-2}.overlay{position:fixed;top:0;left:0;width:100%;height:100%;background:rgba(0,0,0,0.884);z-index:-1}.page-container{display:flex;flex-direction:row;align-items:center;justify-content:center;height:100vh;gap:20px}.vertical-separator{width:2px;height:60%;background-color:rgba(78,78,78,0.3);border-radius:1px}.vertical-separator-text{position:relative;width:2px;height:80%;background-color:rgba(255,255,255,0.3);display:flex;align-items:center;justify-content:center}.vertical-separator-text span{position:absolute;background-color:#1e1e1e;padding:5px 15px;color:white;font-weight:bold;font-size:16px;white-space:nowrap;transform:rotate(-90deg);transform-origin:center;left:50%;top:50%;transform:translate(-50%,-50%)rotate(-90deg)}.containerg{background:rgba(255,255,255,0.1);color:white;padding:20px;border-radius:15px;box-shadow:0px 0px 15px rgba(255,255,255,0.2);display:flex;flex-direction:column;margin:20px;width:300px;justify-content:center;min-height:280px;overflow:hidden;backdrop-filter:blur(10px);align-items:center}
+    input,button{padding:10px;margin:10px;font-size:18px;border-radius:5px;border:none;text-align:center;width:90%}
+    input{background:rgba(255,255,255,0.2);color:white;outline:none}
+    input::placeholder{color:rgba(255,255,255,0.7)}
+    button{background:#28a745;color:white;cursor:pointer;transition:0.3s}
+    button:hover{background:#218838}
+    p{min-height:30px}.news-ticker{position:fixed;bottom:0;width:100%;background:rgba(0,0,0,0.8);color:white;padding:10px 0;text-align:center;font-size:18px;font-weight:bold;overflow:hidden}.ticker-text{opacity:0;transition:opacity 1s ease-in-out}.whatsapp-button{align-self:center;position:fixed;display:inline-block;background-color:#25D366;color:white;padding:10px 20px;font-size:18px;border-radius:5px;text-decoration:none;font-weight:bold;transition:background 0.3s}.whatsapp-button:hover{background-color:#1EBE5D}
+    #myModal,#modalBackdrop{display:none;position:fixed;top:0;left:0;width:100%;height:100%;z-index:1000}
+    #modalBackdrop{background:rgba(0,0,0,0.808)}.modal{display:flex;justify-content:center;align-items:center;width:100%;height:100%}.modal-content{background:rgba(255,255,255,0.1);padding:20px;border-radius:10px;text-align:center;box-shadow:0 0 15px rgba(255,255,255,0.2);backdrop-filter:blur(10px);width:350px}.close{position:absolute;top:15px;right:20px;font-size:30px;cursor:pointer;color:white}.modal-btn{display:block;width:80%;padding:12px;margin:10px auto;background:#28a745;color:white;border:none;border-radius:5px;cursor:pointer;font-size:18px;text-align:center;transition:0.3s}.modal-btn:hover{background:#218838}
+    #VideoModal{display:none;position:fixed;top:50%;left:50%;transform:translate(-50%,-50%);width:90%;max-width:900px;padding:20px;border-radius:10px;text-align:center;z-index:1100}
+    #VideoModal iframe{width:100%;aspect-ratio:16/9;border-radius:10px;max-height:600px}.separator{width:100%;height:1px;background-color:rgba(255,255,255,0.2);margin:10px 0}
+    #clickableText{color:#218d21;cursor:pointer;transition:color 0.3s ease}
+    #clickableText:hover{color:#32CD32}.notification-container{position:fixed;bottom:20px;right:20px;display:flex;flex-direction:column;gap:10px;z-index:1000}.notification{background-color:#237a00;color:white;padding:12px 20px;border-radius:12px;font-size:16px;font-weight:bold;box-shadow:0px 4px 10px rgba(0,0,0,0.2);opacity:0;transform:translateX(100%);transition:opacity 0.3s ease-out,transform 0.3s ease-out;max-width:300px;white-space:nowrap;overflow:hidden;text-overflow:ellipsis}.show{opacity:1;transform:translateX(0)}.fade-out{opacity:0;transform:translateX(100%);transition:opacity 0.5s ease-in,transform 0.5s ease-in}</style></head><body><div class="gradient"></div><div class="overlay"></div><div class="notification-container" id="notificationContainer"></div><nav><div class="container"><h1>تهكير التابلت</h1><div class="nav-separator"></div><div class="nav-links"><a href="https://wa.me/201273364353" target="_blank">تواصل علي واتساب</a><a href="mailto:imjoesonic@gmail.com?subject=استفسار%20بخصوص%20التابلت&body=مرحبًا،%20أريد%20السؤال%20عن%20التابلت..." target="_blank">تواصل عبر البريد</a><a href="tel:+201273364353" target="_blank">اتصال مباشر</a><a href="#" id="openModalNav">روابط الموقع القديم</a></div><div class="nav-separator"></div><div class="nav-icons"><a href="https://www.youtube.com/@ShadowSlimeDEV" target="_blank" class="nav-icon"><img src="https://www.svgrepo.com/download/13671/youtube.svg" alt="YouTube"></a><a href="https://x.com/ShadowSlimeDev" target="_blank" class="nav-icon"><img src="https://upload.wikimedia.org/wikipedia/commons/5/53/X_logo_2023_original.svg" alt="Twitter (X)"></a><a href="https://discord.gg/7Vvj2vpT6S" target="_blank" class="nav-icon"><img src="https://www.svgrepo.com/download/353655/discord-icon.svg" alt="Discord"></a><a href="https://www.facebook.com/profile.php?id=100085805540563" target="_blank" class="nav-icon"><img src="https://i.imgur.com/iBcPCQQ.png" alt="Facebook"></a></div></div></nav><h1></h1><div class="page-container"><div class="containerg"><h2>تسجيل جديد</h2><p>أدخل اسمك ورقم هاتفك:</p><div class="separator"></div><input type="text" id="name" placeholder="اسمك" required><input type="text" id="phone" placeholder="رقم الهاتف" required><div class="separator"></div><button onclick="sendToDiscord()">تسجيل</button><div class="separator"></div><p id="confirmation"></p></div><div class="containerg"><h2>تحقق من حالة التابلت</h2><div class="separator"></div><input type="text" id="check-phone" placeholder="أدخل رقم الهاتف" required><div class="separator"></div><button onclick="checkStatus()">تحقق</button><div class="separator"></div><p id="status-result"></p></div><div class="vertical-separator"><span></div><div class="containerg"><h2>هكر التابلت بنفسك</h2><div class="separator"></div><p>عشان تقدر تهكر التابلت بتاعك، لازم يكون عندك كمبيوتر(بنظام تشغيل ويندوز 10/11)/شاحن سامسونج Type-C/تعريفات USB لسامسونج.</p><div class="separator"></div><button id="OpenVideoModal">شاهد فيديو</button><div class="separator"></div><h2 id="clickableText" style="cursor: pointer;">اللينكات والتطبيقات اللي محتاجها عشان تهكره</h2></div></div><div id="modalBackdrop"></div><!-- The Modal --><div id="myModal" class="modal"><div class="modal-content"><span class="close">&times;</span><h2>روابط الموقع القديم</h2><a href="https://alliancex.org/" class="modal-btn" target="_blank">🤖 Android Alliance</a><a href="https://www.dropbox.com/scl/fi/28jgauiib5oqxxjvjurvr/AndroidUtility.zip?rlkey=w7lo6k0bl210dwjp4dmf0yqdd&st=jocklrf5&dl=1" class="modal-btn" target="_blank">🛠️ Android Utility Tool</a><a href="https://www.dropbox.com/scl/fi/e70f6pwrd7tb9c9z9c0n3/SAMSUNG_USB_Driver_for_Mobile_Phones.exe?rlkey=75q637bwx3ygvqlo6gn9bl1g5&st=bfvntr33&dl=1" class="modal-btn" target="_blank">🔌 SAMSUNG USB Drivers</a><a href="https://raw.githubusercontent.com/jogamerforgames2021/jogamerforgames2021.github.io/refs/heads/main/Tablet/qr.png" class="modal-btn" target="_blank">📸 QR Code</a></div></div><div id="VideoModal" class="modal"><div class="modal-content"><span class="close">&times;</span><h2>فيديو التهكير</h2><iframe width="100%" height="250" src="https://www.youtube.com/embed/E2qzWVRA02Q" frameborder="0" allowfullscreen></iframe></div></div><div class="news-ticker"><span class="ticker-text" id="ticker-text"></span></div><script>function showNotification(message){const container=document.getElementById("notificationContainer");const notification=document.createElement("div");notification.classList.add("notification");notification.textContent=message;container.appendChild(notification);const duration=Math.min(5000,message.length*100);setTimeout(()=>{notification.classList.add("show")},50);setTimeout(()=>{notification.classList.add("fade-out");setTimeout(()=>{notification.remove()},500)},duration)}
+    function sendToDiscord(){let name=document.getElementById("name").value;let phone=document.getElementById("phone").value;if(!name||!phone){showNotification("الرجاء إدخال جميع البيانات المطلوبة");return}
+    let webhookURL="https://discord.com/api/webhooks/1349448461128568884/V4K9Fh2H_8OFkxy1wFFsagqBkFfq_psnWjqaQm5DLg39xiDmSSTwo02p5pKc0k53b5tH";let message={content:`📱 **تسجيل جديد**\n👤 الاسم: ${name}\n📞 الهاتف: ${phone}`};fetch(webhookURL,{method:"POST",headers:{"Content-Type":"application/json"},body:JSON.stringify(message)}).then(()=>{showNotification("سأكون معك قريبًا على واتساب");document.getElementById("confirmation").innerText="سأكون معك قريبًا على واتساب"}).catch(error=>console.error("Error sending webhook: ",error))}
+    function checkStatus(){let phone=document.getElementById("check-phone").value;let githubJSON="https://raw.githubusercontent.com/jogamerforgames2021/jogamerforgames2021.github.io/refs/heads/main/CustomerData.json";fetch(githubJSON).then(response=>response.json()).then(data=>{let record=data.find(entry=>entry.phone===phone);if(record){showNotification(`📢 تم العثور على "${record.name}"!`);document.getElementById("status-result").innerHTML=`👤 الاسم: ${record.name} <br>
+                                    📱 الحالة: <span style="color: ${record.color};">${record.status}</span>`}else{document.getElementById("status-result").innerText="لم يتم العثور على الهاتف";showNotification("لم يتم العثور على الهاتف")}}).catch(error=>console.error("Error fetching status: ",error))}
+    let newsMessages=["🌙 رمضان كريم لكل واحد هنا! 🌟","📚 يارب تجيب درجات عالية في الامتحان الشهري! 💯","🕵️‍♂️ تخيل إيه؟!؟!؟! أنا اخترقت التابلت بتاعك ببلاش! 😂","📩 أول ما تسجل.. استنى عليا لحد ما أكلمك على واتساب عشان نتفاهم. 📱","📱 لو التابلت بتاعك معايا، تقدر تشوف حالته على الموقع برقم موبايلك. 🔍","💻 الموقع الجميل ده معمول بواسطة يوسف أشرف! 🚀","✅ طريقة الاختراق قانونية 100% ومش محتاجة فلوس خالص! 🆓","🔥 متقلقش، كل حاجة تحت السيطرة! 😉","🎉 لو احتجت أي مساعدة، أنا موجود! 💬","⚡ أسرع طريقة عشان تعرف حالة التابلت بتاعك موجودة هنا!","🤔 بتسأل نفسك هو أنا بشتغل ازاي؟! ده سر المهنة! 😏","😂 لو تابلتك مش معايا، يبقى أكيد معاك.. فكّر فيها!","🤖 التكنولوجيا دي متطورة جدًا.. حتى التابلت نفسه مستغرب!","📢 أي حد عنده مشكلة، يكلمني وأنا هساعده بأسرع وقت!","🎮 استمتع بوقتك، وسيب الباقي عليا! 😉","📱 التابلت ده مش عادي.. ده معمول مخصوص عشان يتخترق بسهولة! 😂","🛠️ لو تابلتك عندي، أنا شغال عليه حاليًا، اصبر عليا!","🔍 تقدر تتابع حالة التابلت بسهولة من الموقع باستخدام رقم تليفونك!","🚀 الاختراق بيتم بخطوات بسيطة جدًا ومش بيحتاج منك أي مجهود!","⏳ المدة اللي بياخدها التابلت على حسب نوعه.. بس ماتقلقش، كله تحت السيطرة!","🌐 كل اللي عليك إنك تسجل اسمك ورقمك، وأنا هكملك الباقي!","📩 بعد ما تسجل، هستناك على واتساب عشان نتفاهم على كل حاجة!","📞 ماتقلقش، بياناتك محفوظة وسرية، ومحدش هيعرف أي حاجة غيرك!","🔄 التحديثات بتيجي باستمرار.. جرب تدخل تاني وشوف لو في جديد!","🔑 الموقع شغال 24 ساعة.. تقدر تدخل في أي وقت!","☎️ لو عندك أي استفسار، كلمنا على واتساب: **01273364353**","📲 لو في مشكلة في التسجيل، ابعتلي على واتساب: **01273364353**","💬 الدعم الفني متاح طول الوقت، ماتترددش إنك تبعتلي!","📞 لو عايز تعرف حالة التابلت بسرعة، كلمنا فورًا!","🤝 التواصل معايا سهل.. دوس تسجيل، وهنبقى على اتصال!","🆕 دلوقتي تقدر تخترق التابلت بنفسك بكل سهولة! 😎","🎥 شوف الفيديو التعليمي اللي يوضحلك كل خطوة بالتفصيل! 📺","🔗 كل الروابط اللي محتاجها عشان تبدأ موجودة هنا! 🚀","📜 الخطوات مش معقدة، بس ركز معايا في الشرح وهتعملها بسهولة! 😉","🛠️ لو واجهت أي مشكلة، عندك كل الأدوات اللي هتساعدك هنا! 🔍","📢 لو عجبك الشرح، شاركه مع صحابك اللي محتاجينه! 🤝","⏳ وفر وقتك وتعلم الطريقة الصح بدل ما تستنى حد يعملها ليك! ⏱️","🌙 سبحان الله وبحمده، سبحان الله العظيم! 🤲","📖 قال الله تعالى: {إِنَّ مَعَ الْعُسْرِ يُسْرًا} – صدق الله العظيم ✨","🕌 لا تنسَ الصلاة، فهي نورٌ لقلبك وراحةٌ لروحك! 🕋","🤲 اللهم اجعل هذا اليوم مليئًا بالخيرات والبركات! 💖","💡 ذكرُ الله يطمئن القلوب، فلا تغفل عنه أبدًا! 🕊️","📿 استغفر الله العظيم وأتوب إليه.. غفر الله لك ذنوبك! ✨","💬 كن رحيماً ومتسامحاً، فالدين هو المعاملة! 🤝","🌟 ابتسم في وجه أخيك، فتبسمك في وجه أخيك صدقة! 😊","☝️ اللهم ارزقنا حسن الخاتمة واجعلنا من أهل الفردوس الأعلى! 🏡","📢 لا تنسَ أن تدعو لمن تحب، فالدعاء بظهر الغيب مستجاب! 🤲","💖 اللهم اجعل هذا اليوم مغفرةً ورحمةً ورضوانًا لنا ولأحبابنا! ☀️","📚 العلم عبادة، فتعلم كل يوم شيئًا يقربك من الله! 🏆","🚀 اجعل نيتك لله في كل شيء، وسيرزقك الله من حيث لا تحتسب! 💫","✨ لا تحزن، فالله قريب، يسمع ويرى، ولن يخذلك أبدًا! 🕊️","🕌 اجعل قلبك معلقًا بالمساجد، فهناك الراحة والسكينة! 💙","انت مين ياض؟","إنت عارف؟ تقريبًا 75% من الطلبة اللي بيهكروا التابلت، أول حاجة بينزّلوها هي ببجي موبايل! 😂🔥","إنت مش لوحدك! آلاف الطلبة بيهكروا التابلت كل يوم.. بس السؤال هو، هتستخدمه في إيه؟ 😏📱","نورت يا باشا!!!!","عشان ترجع نظام الوزارة الأصلي على التابلت، كل اللي عليك تعمله هو إعادة ضبط المصنع (Factory Reset)! 🔄📚"];let recentMessages=[];function getRandomMessage(){let availableMessages=newsMessages.filter(msg=>!recentMessages.includes(msg));if(availableMessages.length===0){recentMessages=[];availableMessages=[...newsMessages]}
+    let randomIndex=Math.floor(Math.random()*availableMessages.length);let selectedMessage=availableMessages[randomIndex];recentMessages.push(selectedMessage);if(recentMessages.length>3){recentMessages.shift()}
+    return selectedMessage}
+    function cycleMessages(){let tickerText=document.getElementById("ticker-text");tickerText.style.opacity=0;setTimeout(()=>{tickerText.innerText=getRandomMessage();tickerText.style.opacity=1},1000)}
+    setInterval(cycleMessages,5000);cycleMessages();const modal=document.getElementById("myModal");const backdrop=document.getElementById("modalBackdrop");const openModalNav=document.getElementById("openModalNav");const closeModalBtn=document.querySelector(".close");const VideoYTmodal=document.getElementById("VideoModal");const OpenVideoYTmodal=document.getElementById("OpenVideoModal");const clickableText=document.getElementById("clickableText");function openModal(event){event.preventDefault();modal.style.display="flex";backdrop.style.display="block"}
+    openModalNav.onclick=openModal;clickableText.onclick=openModal;closeModalBtn.onclick=function(){modal.style.display="none";backdrop.style.display="none"};window.onclick=function(event){if(event.target===backdrop){modal.style.display="none";backdrop.style.display="none"}};const videoModal=document.getElementById("VideoModal");const videoModalClose=videoModal.querySelector(".close");const openVideoBtn=document.getElementById("OpenVideoModal");const modalBackdrop=document.getElementById("modalBackdrop");openVideoBtn.addEventListener("click",()=>{videoModal.style.display="flex";modalBackdrop.style.display="block"});document.querySelectorAll(".close").forEach(btn=>{btn.addEventListener("click",function(){document.getElementById("VideoModal").style.display="none";showNotification("لو لسه سامع الفيديو، شغل الشاشة تاني ووقف الفيديو..ـ");document.getElementById("modalBackdrop").style.display="none"})});window.addEventListener("click",(event)=>{if(event.target===videoModal||event.target===modalBackdrop){videoModal.style.display="none";modalBackdrop.style.display="none"}});</script></body></html>
